# ematix-parquet

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/ematix-parquet-async/: Cargo.toml
crates/ematix-parquet-async/examples/: bench_decode_async.rs
crates/ematix-parquet-async/src/: error.rs  file.rs  lib.rs  read.rs
crates/ematix-parquet-async/tests/: async_parquet_file_oracle.rs  read_async_oracle.rs  read_async_stream_oracle.rs  read_byte_array_async_oracle.rs
crates/ematix-parquet-codec/: Cargo.toml
crates/ematix-parquet-codec/examples/: bench_adaptive_dispatch.rs  bench_decode.rs  bench_dict_gather_prefetch.rs  bench_late_mat.rs  bench_parallel_scaling.rs  bench_q14_late_mat.rs  bench_snappy.rs  bench_unpack.rs  key_rotation.rs  probe_bitwidths.rs
crates/ematix-parquet-codec/src/: adaptive.rs  bitpack.rs  bitpack_avx2.rs  bitpack_neon.rs  bloom.rs  byte_stream_split.rs  column.rs  compression.rs  delta.rs  dict.rs  encrypted.rs  error.rs  levels.rs  lib.rs  page_index.rs  parallel.rs  plain.rs  read.rs  rle.rs  write.rs
crates/ematix-parquet-codec/src/parallel/: mod.rs  numa.rs
crates/ematix-parquet-codec/tests/: adaptive_chunk_runner_extended.rs  adaptive_chunk_runner_oracle.rs  adaptive_facade_oracle.rs  bitpack_avx2_small_widths.rs  bitpack_avx2_unit.rs  bitpack_neon_small_widths.rs  bitpack_neon_unit.rs  bloom_oracle.rs  bloom_writer_integration_oracle.rs  byte_array_adaptive_oracle.rs  byte_array_batched_oracle.rs  byte_stream_split_oracle.rs  compression_unit.rs  delta_byte_array_unit.rs  delta_i64_high_bitwidth.rs  delta_real_file_oracle.rs  delta_unit.rs  dict_column_unit.rs  dict_fused_unit.rs  dict_predicate_bitmap_unit.rs  dict_predicate_bitmap_widths_oracle.rs  dict_preserved_u8_oracle.rs  encryption_decrypt_module_oracle.rs  encryption_encrypted_footer_oracle.rs  encryption_write_encrypted_footer_oracle.rs  encryption_write_plaintext_footer_oracle.rs  gather_bitmap_unit.rs  levels_unit.rs  lineitem_byte_array_oracle.rs  lineitem_dict_oracle.rs  lineitem_full_column_oracle.rs  lineitem_multi_column_oracle.rs  multi_col_dict_oracle.rs  multi_rg_bloom_oracle.rs  page_index_real_file_oracle.rs  page_index_unit.rs  parallel_multi_rg_oracle.rs  per_column_codec_oracle.rs  plain_bloom_writer_oracle.rs  plain_int96_flba_oracle.rs  (+25 more)
crates/ematix-parquet-crypto/: Cargo.toml
crates/ematix-parquet-crypto/examples/: bench_aes_gcm.rs
crates/ematix-parquet-crypto/src/: aad.rs  aead.rs  error.rs  key.rs  lib.rs  nonce.rs
crates/ematix-parquet-crypto/tests/: aad_layout.rs  aead_vectors.rs  keys.rs
crates/ematix-parquet-format/: Cargo.toml
crates/ematix-parquet-format/src/: compact.rs  compact_writer.rs  error.rs  lib.rs  metadata.rs  metadata_writer.rs  types.rs
crates/ematix-parquet-format/tests/: column_metadata.rs  compact_list.rs  compact_protocol.rs  compact_struct.rs  encryption_metadata_oracle.rs  encryption_writer_oracle.rs  enums.rs  file_metadata.rs  key_value.rs  logical_type.rs  oracle.rs  page_header.rs  page_index.rs  row_group.rs  schema_element.rs  statistics.rs
crates/ematix-parquet-format/tests/common/: mod.rs
crates/ematix-parquet-io/: Cargo.toml
crates/ematix-parquet-io/examples/: rg_count.rs
crates/ematix-parquet-io/src/: error.rs  file.rs  lib.rs  pages.rs
crates/ematix-parquet-io/tests/: lineitem_smoke.rs
docs/: RELEASING.md
docs/plans/: CURRENT.md  PI-10-async-design.md  PI-10-late-mat-design.md  PI-11-async-design.md  PI-13-encryption-design.md
