[workspace]
resolver = "2"
members = [
    "crates/ematix-parquet-format",
    "crates/ematix-parquet-io",
    "crates/ematix-parquet-codec",
    "crates/ematix-parquet-async",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/ryan-evans-git/ematix-parquet"
authors = ["Ryan Evans <ryanevans23@gmail.com>"]

[workspace.dependencies]
