[package]
name = "ematix-parquet-async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Async / object-store integration for ematix-parquet. Provides AsyncParquetFile on top of object_store::ObjectStore, plus async read façade entry points mirroring the sync crate's surface."
readme = "../../README.md"

[lib]
name = "ematix_parquet_async"

[dependencies]
ematix-parquet-format = { path = "../ematix-parquet-format", version = "0.11" }
# Sync io provides PageWalker (in-memory page iteration after the
# chunk bytes have been fetched). Page walk is pure CPU work over
# a byte slice; we don't re-implement it.
ematix-parquet-io = { path = "../ematix-parquet-io", version = "0.11" }
# Codec provides every byte-slice decoder (plain, dict, compression,
# data_page_view) the async façade composes on top of read_range.
ematix-parquet-codec = { path = "../ematix-parquet-codec", version = "0.11" }
# Wraps every async byte-range source (S3, GCS, Azure, HTTP, local
# FS, in-memory) behind a single trait. Pinned tight per Π.11 plan;
# bump every 6-12 months as object_store releases.
object_store = "0.11"
# Required runtime for object_store. Pin to the major; minor bumps
# are routine.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# bytes::Bytes is the payload type object_store returns; re-using
# it everywhere avoids needless Vec<u8> conversions.
bytes = "1"
# Stream trait for the *_async_stream entries. Lightweight; just the
# core trait, no executor.
futures-core = "0.3"
# Macro for writing async Streams as if they were async fns with yield.
async-stream = "0.3"

[dev-dependencies]
# Async test runtime macros + an in-memory ObjectStore for fixtures.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "test-util"] }
# Local files for fixtures.
tempfile = "3"
# StreamExt for .next().await in tests.
futures-util = "0.3"

[[example]]
name = "bench_decode_async"
path = "examples/bench_decode_async.rs"

[lints]
workspace = true
