[package]
name = "ematix-parquet-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Page-body decompression + per-(encoding, physical type) decoders for Apache Parquet. The crate that owns the actual decode-speed work."

[lib]
name = "ematix_parquet_codec"

[features]
# A/B switch: disable NEON specializations to compare scalar vs NEON
# end-to-end on the same binary. Default: NEON enabled where the host
# target supports it.
no-neon = []

[dependencies]
ematix-parquet-format = { path = "../ematix-parquet-format" }
# Snappy is the default codec for almost every parquet writer in the
# wild (and the one TPC-H data uses). Pinning to a known-stable cut
# of `snap` until benchmarks tell us we want a hand-rolled one.
snap = "1"
# ZSTD: Spark's default for high-compression writes; also the default
# in some polars output paths. The `zstd` crate wraps the upstream C
# library — fast, well-tested, and what parquet-rs uses too.
zstd = "0.13"

[dev-dependencies]
ematix-parquet-io = { path = "../ematix-parquet-io" }
parquet = { version = "58", default-features = false, features = ["snap", "zstd", "experimental"] }
# Third-party comparator in the three-way bench. Polars's
# `LazyFrame::scan_parquet` is what real polars users pay, so we
# time it directly. Pulls in a heavy dep tree (only for bench
# examples — library consumers don't see it).
polars = { version = "0.53", default-features = false, features = ["parquet", "lazy"] }
# polars-io's eager ParquetReader bypasses LazyFrame plan overhead;
# fairer per-column timing for the three-way bench.
polars-io = { version = "0.53", default-features = false, features = ["parquet"] }
# Temp files for the real-file DELTA oracle (write a parquet via
# parquet-rs, then read it back with our pipeline).
tempfile = "3"

# Release-built single-process bench against parquet-rs. Not a
# Criterion harness — plain std::Instant in a loop is enough for the
# coarse "are we within striking distance" comparison the project
# needs right now. Run with `cargo run --release --example bench_decode`.
[[example]]
name = "bench_decode"
path = "examples/bench_decode.rs"

# Q14-shape filter bench: l_shipdate in [1995-09-01, 1995-10-01).
# Three paths timed: late-mat (predicate on dict), eager (decode-
# then-scan), parquet-rs typed read + scan.
# Run: cargo run --release --example bench_late_mat
[[example]]
name = "bench_late_mat"
path = "examples/bench_late_mat.rs"

# Bit-unpack microbench across hot bit widths. Used to decide whether
# SIMD work over the scalar const-generic unpacker is worthwhile.
# Run: cargo run --release --example bench_unpack
[[example]]
name = "bench_unpack"
path = "examples/bench_unpack.rs"

# Probe actual bit_widths used by RLE_DICTIONARY pages in a real
# parquet file. Tells us which widths a SIMD specialization should
# target. Run: cargo run --release --example probe_bitwidths -- <path>
[[example]]
name = "probe_bitwidths"
path = "examples/probe_bitwidths.rs"
