[package]
name = "ematix-parquet-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hand-rolled Apache Thrift compact-protocol decoder and Parquet format types (FileMetaData, PageHeader, encodings) for ematix-parquet."

[lib]
name = "ematix_parquet_format"
