[package]
name = "ematix-parquet-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hand-rolled Apache Thrift compact-protocol decoder and Parquet format types (FileMetaData, PageHeader, encodings) for ematix-parquet."
readme = "../../README.md"

[lib]
name = "ematix_parquet_format"

[dev-dependencies]
# Byte-identical correctness oracle. Used only by tests/oracle.rs to
# decode the same parquet footer via parquet-rs and assert field-by-
# field equality with our decoder. Lib consumers do not see this.
parquet = { version = "58", default-features = false }

[lints]
workspace = true
